<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_animal_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholder"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/detail_animal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/detail_animal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_description"
        android:textSize="18sp"
        android:textColor="@android:color/tertiary_text_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/detail_shareBtn"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-medium"
            android:background="@null"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="shareInformation"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/share"/>

        <Button
            android:id="@+id/detail_exploreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/detail_shareBtn"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-medium"
            android:background="@null"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="backToAnimalList"
            android:textColor="@color/colorAccent"
            android:text="@string/back"/>



    </RelativeLayout>

</LinearLayout>